componente diretivas e termino do comoponente de data-binding

--- a/angular-praticas/src/app/app.component.html
+++ b/angular-praticas/src/app/app.component.html
@@ -8,8 +8,8 @@
     <div class="container mx-auto" id="data-binding-context">
       <app-data-binding></app-data-binding>
     </div>
-   <div class="bg-blue-700 w-safezone" id="diretivas-context">
-
+   <div class="container mx-auto" id="diretivas-context">
+    <app-diretivas></app-diretivas>
    </div>
   </div>
 </div>
