--- a/angular-praticas/src/app/data-binding/data-binding.component.html
+++ b/angular-praticas/src/app/data-binding/data-binding.component.html
@@ -6,5 +6,10 @@
     <app-property-binding></app-property-binding>
     <app-class-binding></app-class-binding>
     <app-event-binding></app-event-binding>
+    <app-two-way-binding></app-two-way-binding>
+    <app-input-property></app-input-property>
+    <app-output-property></app-output-property>
+    <app-ciclo></app-ciclo>
+    <app-viewchild></app-viewchild>
   </div>
 </div>
