--- a/angular-praticas/src/app/data-binding/event-binding/event-binding.component.html
+++ b/angular-praticas/src/app/data-binding/event-binding/event-binding.component.html
@@ -10,12 +10,12 @@
           <h4 class="text-lg font-medium lg:text-xl">
              Mensagem por botão
           </h4>
-          <div class="w-full  border-2 border-solid border-grayCustom-200 rounded-lg shadow-md p-1">
-            <p class="text-lg font-medium  flex justify-center items-center w-full h-12">
+          <div class="w-full p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
+            <p class="flex items-center justify-center w-full h-12 text-lg font-medium">
               {{ mensage }}
             </p>
             <button (click)="clickButton()"
-                    class="w-full h-12 bg-grayCustom-200 hover:bg-grayCustom-300 active:bg-grayCustom-400 transition-all duration-150 rounded">
+                    class="w-full h-12 transition-all duration-150 rounded bg-grayCustom-200 hover:bg-grayCustom-300 active:bg-grayCustom-400">
               Clica Aqui
             </button>
           </div>
@@ -24,14 +24,14 @@
           <h4 class="text-lg font-medium lg:text-xl">
              Capturar Valor de um input
           </h4>
-          <div class="w-full  border-2 border-solid border-grayCustom-200 rounded-lg shadow-md p-1 flex flex-col gap-1">
+          <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
             <input #campoInput
                    (blur)="valorInput(campoInput.value)"
                    (keyup.enter)="valorInput(campoInput.value)"
-                   class="w-full h-12 border-2 border-solid border-grayCustom-100 p-2 rounded outline-1 outline-grayCustom-200"
+                   class="w-full h-12 p-2 border-2 border-solid rounded border-grayCustom-100 outline-1 outline-grayCustom-200"
                    placeholder="Digite alguma mensagem"
             >
-            <p class="w-full h-12 text-lg font-medium flex items-center justify-center bg-grayCustom-100 rounded">
+            <p class="flex items-center justify-center w-full h-12 text-lg font-medium rounded bg-grayCustom-100">
               {{ mensageInput }}
             </p>
           </div>
@@ -43,23 +43,23 @@
           <h4 class="text-lg font-medium lg:text-xl">
            Troca de texto
           </h4>
-          <div class="w-full p-1 rounded-lg shadow-md border-2 border-solid border-grayCustom-200">
+          <div class="w-full p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
             <button (click)="toggleText()"
-                    class="w-full h-16 bg-grayCustom-200 hover:bg-grayCustom-300 active:bg-grayCustom-400 transition-all duration-150 font-medium text-lg rounded ">
+                    class="w-full h-16 text-lg font-medium transition-all duration-150 rounded bg-grayCustom-200 hover:bg-grayCustom-300 active:bg-grayCustom-400 ">
               {{ buttonText }}
             </button>
           </div>
         </div>
         <div class="w-full lg:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
-             Contador
+            Contador
           </h4>
-          <div class="w-full border-2 border-solid border-gray-200 rounded-lg shadow-md p-1">
-            <p class="w-full h-12 flex justify-center items-center text-lg font-normal">
+          <div class="w-full p-1 border-2 border-gray-200 border-solid rounded-lg shadow-md">
+            <p class="flex items-center justify-center w-full h-12 text-lg font-normal">
               O botao foi clicado {{ contador }} vezes
             </p>
             <button (click)="incremantaValor()"
-                    class="w-full h-12 bg-grayCustom-200 hover:bg-grayCustom-300 active:bg-grayCustom-400 transition-all duration-150 rounded font-medium text-lg  ">
+                    class="w-full h-12 text-lg font-medium transition-all duration-150 rounded bg-grayCustom-200 hover:bg-grayCustom-300 active:bg-grayCustom-400 ">
               Incrementar valor
             </button>
           </div>
