--- a/angular-praticas/src/app/data-binding/two-way-binding/two-way-binding.component.html
+++ b/angular-praticas/src/app/data-binding/two-way-binding/two-way-binding.component.html
@@ -1,1 +1,82 @@
-<p>two-way-binding works!</p>
+<div class="container flex flex-col gap-2 mx-auto mb-5">
+  <h2 class="flex justify-start text-lg font-medium lg:text-2xl md:text-xl">
+    Two Way data binding
+  </h2>
+
+  <div class="container w-full gap-3 mb-4 lg:px-20 md:gap-5 lg:gap-10">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-12 lg:place-items-center sm:gap-5">
+
+      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
+        <div class="w-full lg:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+            Texto Dinamico
+          </h4>
+          <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-lg border-grayCustom-200">
+            <input [(ngModel)]="textStart"
+                   class="w-full h-12 p-2 border-2 border-solid rounded border-grayCustom-100 outline-grayCustom-200"
+                   placeholder="Digite um texto"
+            />
+            <p class="flex items-center justify-center w-full h-12 rounded bg-grayCustom-100">
+              {{ textStart }}
+            </p>
+          </div>
+        </div>
+        <div class="w-full lg:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+            Controle de tamanho de fonte
+          </h4>
+          <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-lg border-grayCustom-200">
+            <input [(ngModel)]="fontSize"
+                   class="w-full p-1 border-2 border-solid rounded outline-none h-11 border-grayCustom-100 focus:border-grayCustom-200"
+                   placeholder="Digite um numero"
+                   type="number"
+            />
+            <p [style.fontSize.px]="fontSize"
+               class="flex items-center justify-center w-full font-medium rounded h-11 bg-grayCustom-100 ">
+              Texto com tanho dinamico
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
+        <div class="w-full lg:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+            Modo escuro/claro
+          </h4>
+          <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-lg border-grayCustom-200">
+            <div class="flex items-center w-full h-11">
+              <input [(ngModel)]="isDarkMode"
+                     class="border-2 border-solid outline-none size-6 border-grayCustom-100 focus:border-grayCustom-200"
+                     id="checkBox"
+                     type="checkbox"
+              />
+              <label class="ml-1 text-base font-medium"
+                     for="checkBox">
+                Modo Escuro
+              </label>
+            </div>
+            <p [class.dark-mode]="isDarkMode" [class.light-mode]="!isDarkMode"
+               class="flex items-center justify-center w-full text-lg font-medium rounded h-11">
+              o modo atual é: {{ isDarkMode ? 'Escuro' : 'claro' }}
+            </p>
+          </div>
+        </div>
+        <div class="w-full lg:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+            Ajuste de Valor de input range
+          </h4>
+          <div class="w-full p-1 border-2 border-solid rounded-lg shadow-lg border-grayCustom-200">
+            <div class="flex items-center justify-center w-full h-11">
+              <input [(ngModel)]="valorRange"
+                     class="w-96" max="100" min="0" type="range">
+            </div>
+            <div class="flex items-center justify-center w-full font-medium rounded h-11 bg-grayCustom-100">
+              valor do range é: {{ valorRange }}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
