--- a/angular-praticas/src/app/data-binding/class-binding/class-binding.component.html
+++ b/angular-praticas/src/app/data-binding/class-binding/class-binding.component.html
@@ -7,7 +7,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-12 lg:place-items-center sm:gap-5">
 
       <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-05">
           <h4 class="text-lg font-medium lg:text-xl">
            Trocando a cor da fonte
           </h4>
@@ -22,7 +22,7 @@
             </button>
           </div>
         </div>
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-06">
           <h4 class="text-lg font-medium lg:text-xl">
            Aumentando fonte
           </h4>
@@ -46,7 +46,7 @@
       </div>
 
       <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96">
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-07">
           <h4 class="text-lg font-medium lg:text-xl">
            classes dinamicas
           </h4>
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="w-full lg:w-96">
-          <h4 class="text-lg font-medium lg:text-xl">
+          <h4 class="text-lg font-medium lg:text-xl" id="pratica-08">
             Mudar cor de fundo
             <div class="w-full p-1 border-2 border-solid rounded-lg shadow-lg border-grayCustom-200">
               <div [style.backgroundColor]="bgColor"
