--- a/angular-praticas/src/app/data-binding/event-binding/event-binding.component.html
+++ b/angular-praticas/src/app/data-binding/event-binding/event-binding.component.html
@@ -6,8 +6,8 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-10 lg:place-items-center sm:gap-5">
 
       <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96">
-          <h4 class="text-lg font-medium lg:text-xl">
+        <div class="w-full lg:w-96" id="pratica-09">
+          <h4 class="text-lg font-medium lg:text-xl" >
              Mensagem por botão
           </h4>
           <div class="w-full p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
@@ -20,7 +20,7 @@
             </button>
           </div>
         </div>
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-10">
           <h4 class="text-lg font-medium lg:text-xl">
              Capturar Valor de um input
           </h4>
@@ -39,7 +39,7 @@
       </div>
 
       <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96">
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-11">
           <h4 class="text-lg font-medium lg:text-xl">
            Troca de texto
           </h4>
@@ -50,7 +50,7 @@
             </button>
           </div>
         </div>
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-12">
           <h4 class="text-lg font-medium lg:text-xl">
             Contador
           </h4>
