--- a/angular-praticas/src/app/data-binding/input-property/input-property.component.html
+++ b/angular-praticas/src/app/data-binding/input-property/input-property.component.html
@@ -7,7 +7,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-12 lg:place-items-center sm:gap-5">
 
       <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-13">
           <h4 class="text-lg font-medium lg:text-xl">
             Texto com input Property
           </h4>
@@ -18,7 +18,7 @@
           </div>
         </div>
 
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-14">
           <h4 class="text-lg font-medium lg:text-xl">
             Alterando background
           </h4>
@@ -34,7 +34,7 @@
       </div>
 
       <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-15">
           <h4 class="text-lg font-medium lg:text-xl">
             Exibindo Lista de Itens
           </h4>
@@ -43,7 +43,7 @@
             </app-item-list>
           </div>
         </div>
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-16">
           <h4 class="text-lg font-medium lg:text-xl">
             Controlando Visibilidade
           </h4>
