--- a/angular-praticas/src/app/data-binding/output-property/output-property.component.html
+++ b/angular-praticas/src/app/data-binding/output-property/output-property.component.html
@@ -7,7 +7,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-12 lg:place-items-center sm:gap-5">
 
       <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-17">
           <h4 class="text-lg font-medium lg:text-xls">
             Botao contador
           </h4>
@@ -18,7 +18,7 @@
             <app-botao-contador (contador)="valorAtualizado($event)"></app-botao-contador>
           </div>
         </div>
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-18">
           <h4 class="text-lg font-medium lg:text-xl">
             Enviando texto digitado
           </h4>
@@ -32,7 +32,7 @@
       </div>
 
       <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-19">
           <h4 class="text-lg font-medium lg:text-xl">
             Alterando visibilidade
           </h4>
@@ -45,7 +45,7 @@
              </app-alterando-visibilidade>
           </div>
         </div>
-        <div class="w-full lg:w-96">
+        <div class="w-full lg:w-96" id="pratica-20">
           <h4 class="text-lg font-medium lg:text-xl">
             Notificação de Ação
           </h4>
