--- a/angular-praticas/src/app/diretivas/diretiva-ngif/diretiva-ngif.component.html
+++ b/angular-praticas/src/app/diretivas/diretiva-ngif/diretiva-ngif.component.html
@@ -7,7 +7,67 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-12 lg:place-items-center sm:gap-5">
 
       <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
+        <div id="pratica-33" class="w-full lg:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+             Parágrafo Condicional
+          </h4>
+          <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200 ">
+            <button (click)="toggleText()"
+              class="w-full h-12 transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+              Mostrar/Ocultar condição
+            </button>
+            <p *ngIf="showText"
+              class="flex items-center justify-center w-full h-12 font-medium rounded bg-grayCustom-100">texto visivel quando a condição for true
+            </p>
+          </div>
+        </div>
+        <div id="pratica-34" class="w-full lg:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+            Exibindo Input
+          </h4>
+          <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200 ">
+            <button (click)="toggleInput()"
+              class="w-full h-12 transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+              Mostrar/Ocultar condição
+            </button>
+            <input
+            *ngIf="showInput"
+            #focarInput
+            type="text"
+            class="h-12 p-1 border-2 border-solid rounded border-grayCustom-200 outline-grayCustom-500">
+          </div>
+        </div>
+      </div>
 
+      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
+        <div id="pratica-35" class="w-full lg:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+            Exibindo componente filho
+          </h4>
+          <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
+            <button (click)="toggleChild()"
+              class="w-full h-12 transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+              Mostrar/Ocultar condição
+            </button>
+            <app-filho02 *ngIf="showChild"></app-filho02>
+          </div>
+        </div>
+        <div id="pratica-36" class="w-full lg:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+            Exibindo bloco de informações
+          </h4>
+          <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
+            <button (click)="toggleInfo()" class="w-full h-12 transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+              mostrar/Ocultar condição
+            </button>
+            <p *ngIf="showBlock" class="flex items-center justify-center w-full h-12 font-medium rounded bg-grayCustom-50">0 informações</p>
+            <div *ngIf="showInfo" class="flex flex-col gap-1">
+              <p class="flex items-center justify-center w-full h-12 font-medium rounded bg-grayCustom-50">Informação 1</p>
+              <p class="flex items-center justify-center w-full h-12 font-medium rounded bg-grayCustom-50">Informação 2</p>
+              <p class="flex items-center justify-center w-full h-12 font-medium rounded bg-grayCustom-50">Informação 3</p>
+            </div>
+          </div>
+        </div>
       </div>
   </div>
 </div>
