--- a/angular-praticas/src/app/app.component.html
+++ b/angular-praticas/src/app/app.component.html
@@ -5,11 +5,36 @@
     </h1>
   </div>
   <div class="flex flex-col w-full p-3 shadow-xl bg-stone-50 rounded-2xl">
-    <div class="container mx-auto" id="data-binding-context">
-      <app-data-binding></app-data-binding>
-    </div>
-   <div class="container mx-auto" id="diretivas-context">
-    <app-diretivas></app-diretivas>
-   </div>
+        <div class="container flex flex-wrap gap-3 p-1 mx-auto mb-3">
+          <h2 class="nav-titulo">Conteudos: </h2>
+          <button class="nav-button"
+            [class.active]="componentActive == 'data-binding'"
+            (click)="componentActive = 'data-binding'">
+            data-binding
+          </button>
+          <button class="nav-button"
+          [class.active]="componentActive == 'diretivas'"
+            (click)="componentActive = 'diretivas'">
+            diretivas
+          </button>
+        </div>
+
+        <div class="container mx-auto" [ngSwitch]="componentActive">
+          <div class="container mx-auto" id="data-binding-context" *ngSwitchCase="'data-binding'">
+            <app-data-binding></app-data-binding>
+          </div>
+          <div class="container mx-auto" id="diretivas-context" *ngSwitchCase="'diretivas'">
+            <app-diretivas></app-diretivas>
+          </div>
+          <div *ngSwitchDefault >
+            <h1 class="container flex items-center justify-center mx-auto text-lg font-semibold lg:text-2xl md:text-xl h-96">
+              Nenhum conteudo selecionado
+            </h1>
+          </div>
+        </div>
+
+
+
+
   </div>
 </div>
