mudanças na pagina inicial

--- a/angular-praticas/src/app/app.component.css
+++ b/angular-praticas/src/app/app.component.css
@@ -1,7 +1,8 @@
 .nav-button {
-  @apply px-3 py-2 text-lg font-medium transition-all duration-75 rounded-lg cursor-pointer border-2 border-solid border-grayCustom-200 hover:shadow-md active:bg-grayCustom-200 active:shadow-lg;
+  @apply px-3 py-2 text-lg font-medium transition-all duration-75 border-2 border-solid rounded-lg cursor-pointer border-grayCustom-200 hover:shadow-md active:bg-grayCustom-200 active:shadow-lg;
 }
 
 .nav-titulo {
-  @apply px-3 py-2 flex justify-center items-center text-xl font-medium ;
+  @apply flex items-center justify-center px-3 py-2 text-xl font-medium ;
 }
+
