--- a/angular-praticas/src/app/diretivas/diretivas.component.html
+++ b/angular-praticas/src/app/diretivas/diretivas.component.html
@@ -4,5 +4,6 @@
   </h1>
   <div class="container flex flex-col justify-center gap-4 lg:p-10 md:p-8">
     <app-diretiva-ngif></app-diretiva-ngif>
+    <app-diretiva-switch></app-diretiva-switch>
   </div>
 </div>
