--- a/angular-praticas/src/app/data-binding/event-binding/event-binding.component.html
+++ b/angular-praticas/src/app/data-binding/event-binding/event-binding.component.html
@@ -2,11 +2,11 @@
   <h2 class="flex justify-start text-lg font-medium lg:text-2xl md:text-xl">
     Event Binding
   </h2>
-  <div class="container w-full gap-3 mb-4 lg:px-20 md:gap-5 lg:gap-10">
+  <div class="container w-full gap-3 mb-4 2xl:px-20 md:gap-5 lg:gap-10">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-10 lg:place-items-center sm:gap-5">
 
-      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96" id="pratica-09">
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div class="w-full 2xl:w-96" id="pratica-09">
           <h4 class="text-lg font-medium lg:text-xl" >
              Mensagem por botão
           </h4>
@@ -20,7 +20,7 @@
             </button>
           </div>
         </div>
-        <div class="w-full lg:w-96" id="pratica-10">
+        <div class="w-full 2xl:w-96" id="pratica-10">
           <h4 class="text-lg font-medium lg:text-xl">
              Capturar Valor de um input
           </h4>
@@ -38,8 +38,8 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96">
-        <div class="w-full lg:w-96" id="pratica-11">
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div class="w-full 2xl:w-96" id="pratica-11">
           <h4 class="text-lg font-medium lg:text-xl">
            Troca de texto
           </h4>
@@ -50,7 +50,7 @@
             </button>
           </div>
         </div>
-        <div class="w-full lg:w-96" id="pratica-12">
+        <div class="w-full 2xl:w-96" id="pratica-12">
           <h4 class="text-lg font-medium lg:text-xl">
             Contador
           </h4>
