--- a/angular-praticas/src/app/data-binding/property-binding/property-binding.component.html
+++ b/angular-praticas/src/app/data-binding/property-binding/property-binding.component.html
@@ -3,10 +3,10 @@
     Interpolação e Property binding
   </h2>
 
-  <div class="container grid w-full grid-cols-1 gap-3 mb-4 sm:grid-cols-2 lg:gap-15 md:gap-10 lg:place-items-center lg:px-20 sm:gap-5">
+  <div class="container grid w-full grid-cols-1 gap-3 mb-4 sm:grid-cols-2 lg:gap-15 md:gap-10 lg:place-items-center 2xl:px-20 sm:gap-5">
 
-    <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-      <div class="w-full lg:w-96">
+    <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 ">
+      <div class="w-full 2xl:w-96">
         <h4 class="text-lg font-medium lg:text-xl" id="pratica-01">
            Perfil de usuario
         </h4>
@@ -19,7 +19,7 @@
           </div>
         </div>
       </div>
-      <div class="w-full lg:w-96" id="pratica-02">
+      <div class="w-full 2xl:w-96" id="pratica-02">
         <h4 class="text-lg font-medium lg:text-xl">
          Relogio dinamico
         </h4>
@@ -33,7 +33,7 @@
           </button>
         </div>
       </div>
-      <div class="w-full lg:w-96" id="pratica-03">
+      <div class="w-full 2xl:w-96" id="pratica-03">
         <h4 class="text-lg font-medium lg:text-xl">
            semaforo
         </h4>
@@ -62,7 +62,7 @@
        Card de Produtos
       </h4>
 
-      <div class="rounded-lg shadow-xl lg:w-96 md:w-80">
+      <div class="rounded-lg shadow-xl xl:w-96 lg:w-80">
         <div class="flex items-center justify-center w-full">
           <img [src]="imagemProduto" class="rounded-t">
         </div>
