--- a/angular-praticas/src/app/data-binding/viewchild/viewchild.component.html
+++ b/angular-praticas/src/app/data-binding/viewchild/viewchild.component.html
@@ -3,11 +3,11 @@
     ViewChild
   </h2>
 
-  <div class="container w-full gap-3 mb-4 lg:px-20 md:gap-5 lg:gap-10">
+  <div class="container w-full gap-3 mb-4 2xl:px-20 md:gap-5 lg:gap-10">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-12 lg:place-items-center sm:gap-5">
 
-      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div id="pratica29" class="w-full lg:w-96">
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div id="pratica29" class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             Pratica 29: controlando elemento
           </h4>
@@ -19,7 +19,7 @@
             </button>
           </div>
         </div>
-        <div id="pratica30" class="w-full lg:w-96">
+        <div id="pratica30" class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             Pratica 30: Focar em um Input
           </h4>
@@ -32,8 +32,8 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div id="pratica31" class="w-full lg:w-96">
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div id="pratica31" class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             Pratica 31: Acessando um Componente Filho
           </h4>
@@ -47,7 +47,7 @@
             <app-componente-filho01></app-componente-filho01>
           </div>
         </div>
-        <div id="pratica32" class="w-full lg:w-96">
+        <div id="pratica32" class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             Pratica 32: chamando metodo
           </h4>
