--- a/angular-praticas/src/app/diretivas/diretiva-switch/diretiva-switch.component.html
+++ b/angular-praticas/src/app/diretivas/diretiva-switch/diretiva-switch.component.html
@@ -2,11 +2,11 @@
   <h2 class="flex justify-start text-lg font-medium lg:text-2xl md:text-xl">
     Diretiva ngSwitch
   </h2>
-  <div class="container w-full gap-3 mb-4 lg:px-20 md:gap-5 lg:gap-10">
+  <div class="container w-full gap-3 mb-4 2xl:px-20 md:gap-5 lg:gap-10">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-12 lg:place-items-center sm:gap-5">
 
-      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96">
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             Exibindo Mensagens
           </h4>
@@ -29,7 +29,7 @@
             </div>
           </div>
         </div>
-        <div class="w-full lg:w-96">
+        <div class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             Monstrando Componentes
           </h4>
@@ -49,8 +49,8 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96">
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             Aplicando estilos
           </h4>
@@ -74,7 +74,7 @@
 
           </div>
         </div>
-        <div class="w-full lg:w-96">
+        <div class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             Mostrando dias da semana
           </h4>
