--- a/angular-praticas/src/app/app.component.css
+++ b/angular-praticas/src/app/app.component.css
@@ -2,6 +2,10 @@
   @apply w-full px-3 py-2 text-lg font-medium transition-all duration-75 border-2 border-solid rounded-lg cursor-pointer border-grayCustom-200 hover:shadow-md active:bg-grayCustom-200 active:shadow-lg;
 }
 
+.close-button {
+  @apply w-full px-3 py-2 text-lg font-medium transition-all duration-75  rounded-lg cursor-pointer bg-grayCustom-200 shadow-md hover:bg-grayCustom-300 active:bg-grayCustom-400 active:shadow-lg;
+}
+
 .nav-titulo {
   @apply flex items-center justify-center px-3 py-2 text-xl font-medium ;
 }
@@ -12,6 +16,19 @@
 .no-scrollbar {
   scrollbar-width: none;
 }
+
+.fa-bars {
+  @apply text-3xl px-3;
+}
+
+.fa-bars:hover {
+  @apply scale-110 transition-all duration-75;
+}
+
+.drawerMenu {
+  @apply bg-red-500
+}
+
 
 
 
