--- a/angular-praticas/src/app/data-binding/ciclo/ciclo.component.html
+++ b/angular-praticas/src/app/data-binding/ciclo/ciclo.component.html
@@ -3,11 +3,11 @@
     Ciclo de vida do Componente
   </h2>
 
-  <div class="container w-full gap-3 mb-4 lg:px-20 md:gap-5 lg:gap-10">
+  <div class="container w-full gap-3 mb-4 2xl:px-20 md:gap-5 lg:gap-10">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-12 lg:place-items-center sm:gap-5">
 
-      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div id="pratica25" class="w-full lg:w-96">
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div id="pratica25" class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             ngOnInit
           </h4>
@@ -22,7 +22,7 @@
             </p>
           </div>
         </div>
-        <div id="pratica26" class="w-full lg:w-96">
+        <div id="pratica26" class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             ngOnChanges
           </h4>
@@ -39,8 +39,8 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div id="prativa27" class="w-full lg:w-96">
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div id="prativa27" class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             ngAfterViewInit
           </h4>
@@ -51,7 +51,7 @@
             <p class="text-sm text-grayCustom-500">O título acima foi estilizado dinamicamente com ciclo de vida.</p>
           </div>
         </div>
-        <div id="pratica28" class="w-full lg:w-96">
+        <div id="pratica28" class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
             ngOnDestroy
           </h4>
