--- a/angular-praticas/src/app/data-binding/two-way-binding/two-way-binding.component.html
+++ b/angular-praticas/src/app/data-binding/two-way-binding/two-way-binding.component.html
@@ -3,11 +3,11 @@
     Two Way data binding
   </h2>
 
-  <div class="container w-full gap-3 mb-4 lg:px-20 md:gap-5 lg:gap-10">
+  <div class="container w-full gap-3 mb-4 2xl:px-20 md:gap-5 lg:gap-10">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:gap-15 md:gap-12 lg:place-items-center sm:gap-5">
 
-      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96" id="pratica-12">
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div class="w-full 2xl:w-96" id="pratica-12">
           <h4 class="text-lg font-medium lg:text-xl">
             Texto Dinamico
           </h4>
@@ -21,7 +21,7 @@
             </p>
           </div>
         </div>
-        <div class="w-full lg:w-96" id="pratica-13">
+        <div class="w-full 2xl:w-96" id="pratica-13">
           <h4 class="text-lg font-medium lg:text-xl">
             Controle de tamanho de fonte
           </h4>
@@ -39,8 +39,8 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-center gap-3 md:gap-5 lg:gap-12 lg:w-96 md:w-full">
-        <div class="w-full lg:w-96" id="pratica-13">
+      <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
+        <div class="w-full 2xl:w-96" id="pratica-13">
           <h4 class="text-lg font-medium lg:text-xl">
             Modo escuro/claro
           </h4>
@@ -62,7 +62,7 @@
             </p>
           </div>
         </div>
-        <div class="w-full lg:w-96" id="pratica-14">
+        <div class="w-full 2xl:w-96" id="pratica-14">
           <h4 class="text-lg font-medium lg:text-xl">
             Ajuste de Valor de input range
           </h4>
