--- a/angular-praticas/src/app/app.component.html
+++ b/angular-praticas/src/app/app.component.html
@@ -165,8 +165,10 @@
 
 
       <div *ngSwitchDefault class="container flex flex-col items-center justify-center w-full h-full gap-3 mx-auto">
-        <h1 class="container flex items-center justify-center mx-auto text-xl font-semibold lg:text-2xl ">
-          Nenhum conteudo selecionado
+        <h1 class="container flex flex-col items-center justify-center gap-4 mx-auto">
+          <span class="text-xl font-semibold text-center lg:text-2xl">Seja Bem vindo ao meu site sobre minhas praticas do angular</span>
+          <br>
+          <span class="text-lg font-medium text-center lg:text-xl">Por favor, Selecionar um conteudo a esquerda!</span>
         </h1>
       </div>
     </div>
