--- a/angular-praticas/src/app/diretivas/diretivas.component.html
+++ b/angular-praticas/src/app/diretivas/diretivas.component.html
@@ -5,5 +5,6 @@
   <div class="container flex flex-col justify-center gap-4 lg:p-10 md:p-8">
     <app-diretiva-ngif></app-diretiva-ngif>
     <app-diretiva-switch></app-diretiva-switch>
+    <app-diretiva-ngfor></app-diretiva-ngfor>
   </div>
 </div>
