--- a/angular-praticas/src/app/diretivas/diretivas.component.html
+++ b/angular-praticas/src/app/diretivas/diretivas.component.html
@@ -6,5 +6,6 @@
     <app-diretiva-ngif></app-diretiva-ngif>
     <app-diretiva-switch></app-diretiva-switch>
     <app-diretiva-ngfor></app-diretiva-ngfor>
+    <app-diretiva-ngclass></app-diretiva-ngclass>
   </div>
 </div>
