--- a/angular-praticas/src/app/diretivas/diretiva-ngfor/diretiva-ngfor.component.html
+++ b/angular-praticas/src/app/diretivas/diretiva-ngfor/diretiva-ngfor.component.html
@@ -37,8 +37,8 @@
             Objetos com propriedades
           </h4>
           <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
-            <ul class="grid grid-cols-3 gap-1 p-1">
-              <li *ngFor="let usuario of usuarios" class="flex flex-col items-center h-24 p-2 rounded bg-neutral-100">
+            <ul class="grid grid-cols-3 gap-1">
+              <li *ngFor="let usuario of usuarios" class="flex flex-col items-center justify-center h-24 p-1 rounded bg-neutral-100">
                 <span>
                   Nome: {{ usuario.name }}
                 </span>
@@ -54,9 +54,9 @@
             Elementos com condições
           </h4>
           <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
-            <ul class="grid grid-cols-3 gap-1 p-1">
+            <ul class="grid grid-cols-3 gap-1 ">
               <ng-content *ngFor="let numero of numeros">
-                <li *ngIf="numero > 15" class="flex items-center justify-center h-24 p-2 text-lg font-medium rounded bg-neutral-100">
+                <li *ngIf="numero > 15" class="flex items-center justify-center h-24 p-1 text-lg font-medium rounded bg-neutral-100">
                   {{ numero }}
                 </li>
               </ng-content>
