--- a/angular-praticas/src/app/diretivas/diretiva-ngclass/diretiva-ngclass.component.html
+++ b/angular-praticas/src/app/diretivas/diretiva-ngclass/diretiva-ngclass.component.html
@@ -7,15 +7,37 @@
       <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
         <div class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
-
-          </h4>
-        </div>
-        <div class="w-full 2xl:w-96">
-          <h4 class="text-lg font-medium lg:text-xl">
             Alterando a cor do texto
           </h4>
           <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
-
+            <p class="flex items-center justify-center w-full h-12 text-lg font-medium"
+            [ngClass]=" {
+              'text-red-600': isRed,
+              'text-green-600': !isRed
+            }">
+              Texto com mudança de cor
+            </p>
+            <button (click)="toggleText()"
+            class="w-full h-12 text-lg font-medium transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+              alterar cor
+            </button>
+          </div>
+        </div>
+        <div class="w-full 2xl:w-96">
+          <h4 class="text-lg font-medium lg:text-xl">
+            Classes com base em um Número
+          </h4>
+          <div class="flex flex-col w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
+            <p class="flex items-center justify-center w-full h-12 text-lg font-medium rounded" [ngClass]="{
+              'low-number': number < 10,
+              'medium-number': number >= 10 && number <= 20,
+              'high-number': number > 20,
+            }">
+               {{ number }}
+            </p>
+            <button (click)="toggleNumber()" class="w-full h-12 text-lg font-medium transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+              Alterar numero
+            </button>
           </div>
         </div>
       </div>
@@ -23,13 +45,47 @@
       <div class="flex flex-col items-start gap-3 xl:items-center md:gap-5 lg:gap-12 xl:w-96 md:w-full">
         <div class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
-
+            Destacando um item
           </h4>
+          <div class="w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
+            <ul class="grid w-full h-24 grid-cols-3 gap-1">
+              <li *ngFor="let item of items; let i = index"
+              [ngClass]="{'selected': i === itemSelecionado}"
+              (click)="selecionarItem(i)"
+              class="flex items-center justify-center font-medium rounded bg-neutral-100">
+                {{ item }}
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="w-full 2xl:w-96">
           <h4 class="text-lg font-medium lg:text-xl">
-
+            Aplicando multiplas classes
           </h4>
+          <div class="w-full gap-1 p-1 border-2 border-solid rounded-lg shadow-md border-grayCustom-200">
+            <p [ngClass]="{
+              'font-bold': textBold,
+              'italic': textItalic,
+              'underline': textUnderline
+            }"
+            class="flex items-center justify-center w-full h-12 text-lg rounded">
+              Esse texto tem varios formatos
+            </p>
+            <div class="grid w-full grid-cols-3 gap-1">
+              <button (click)="toggleBold()"
+              class="w-full h-12 text-lg font-medium transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+                Bold
+              </button>
+              <button (click)="toggleItalic()"
+              class="w-full h-12 text-lg font-medium transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+                Italic
+              </button>
+              <button (click)="toggleUnderline()"
+              class="w-full h-12 text-lg font-medium transition-all duration-150 rounded bg-grayCustom-100 hover:bg-grayCustom-200 active:bg-grayCustom-300">
+                Underline
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
